[package]
name = "bridgerpay-connector"
version = "0.2.12"
edition = "2021"
authors = ["gorin <mxmgorin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }

http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
error-chain = { version = "0.12.4", default-features = false }
serde_qs = "*"
strum = { version = "0.26", features = ["derive"] }
# encryption-----------
base64 = "*"
libaes = "*"
prost = "*"
sha2 = "*"
hmac = "0.13.0-pre.4"
ring = "0.17.9"
# ---------------------

[dev-dependencies]
uuid = { version = "*", features = ["v4"] }
